# splunk-knowledge

./: .gitignore  CLAUDE.md  README.md  cursor_overkill_2026_05_23.md
.claude-plugin/: marketplace.json
.planning/: FISR-BASELINE.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v5.0.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v4.1.0-REQUIREMENTS.md  v4.1.0-ROADMAP.md  v5.2.0-REQUIREMENTS.md  v5.2.0-ROADMAP.md  v5.3.0-REQUIREMENTS.md  v5.4.0-REQUIREMENTS.md  v5.4.0-ROADMAP.md  v5.5.0-REQUIREMENTS.md  v5.5.0-ROADMAP.md  v5.6.0-ROADMAP.md  v5.7.0-ROADMAP.md  v5.8.0-REQUIREMENTS.md  v5.8.0-ROADMAP.md  v6.0-DRAFT.md  v6.0-REQUIREMENTS-final.md  v6.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  ds-extension-api.md
archive/: cursor_review_2026_05_23.md
plugins/splunk-admin/: README.md
plugins/splunk-custom-viz/: KNOWN-CORRECTIONS.md  README.md
plugins/splunk-dashboard-studio/: KNOWN-ISSUES.md  README.md
plugins/splunk-dashboards/: .gitignore  KNOWN-ISSUES.md  PROGRESS.md  README.md  pyproject.toml
plugins/splunk-spl/: ENRICHMENT-TODO.md  README.md
plugins/splunk-viz-packs/: README.md
scripts/: build-admin-conf-refs.py  generate_splunk_admin_conf_refs.py
splunk-dashboards/: README.md  plugin.json  pyproject.toml
splunk-dashboards/src/splunk_dashboards/: __init__.py  workspace.py
splunk-dashboards/tests/: test_workspace.py
tests/test01/: critique.md  (+3 more)
(+1854 files in other folders)
